tests/transform/replace/replace_with_5/sample/output.txt
Error while processing replace_with_5.
main.c:5:41: error: directive '#pragma spf transform replace' cannot contain more than one 'with' clause
#pragma spf transform replace with(baz) with(foo)
                                        ^
1 error generated.
Error while processing main.c.
